Name:                overload-app
Version:             0.0.1
Synopsis:            Quasi-quoter for overloading function application
Description:
License:             BSD3
License-file:        LICENSE
Author:              Michael Sloan
Maintainer:          Michael Sloan <mgsloan at gmail>
Homepage:            http://github.com/mgsloan/overload-app
Copyright:           Michael Sloan 2012
Category:            Template Haskell
Build-type:          Simple
Stability:           experimental
Cabal-version:       >=1.6
Bug-Reports:         http://github.com/mgsloan/overload-app
Source-Repository head
  Type: git
  Location: git://github.com/mgsloan/overload-app

Library
  Hs-Source-Dirs:    src
  Exposed-modules:   Language.Haskell.TH.OverloadApp
  Extensions:        RankNTypes
  Build-depends:     base >= 3.0 && < 6,
                     haskell-src-meta, 
                     syb,
                     template-haskell >= 2.5.0.0
  Ghc-options:       -Wall
