Name:                quasi-extras
Version:             0.0.1
Synopsis:            Utilities for building advanced Quasi-quoters.
Description:
License:             BSD3
License-file:        LICENSE
Author:              Michael Sloan
Maintainer:          Michael Sloan <mgsloan at gmail>
Homepage:            http://github.com/mgsloan/overload-app
Copyright:           Michael Sloan 2012
Category:            Template Haskell
Build-type:          Simple
Stability:           experimental
Cabal-version:       >=1.6
Bug-Reports:         http://github.com/mgsloan/overload-app
Source-Repository head
  Type: git
  Location: git://github.com/mgsloan/overload-app

Library
  Hs-Source-Dirs:    src

  Exposed-modules:   Language.Quasi.Ast
                     Language.Quasi.Ast.TH
                     Language.Quasi.Convenience
                     Language.Quasi.Internal.Conversion
                     Language.Quasi.Internal.Desugar
                     Language.Quasi.Internal.Fixity
                     Language.Quasi.Internal.Utils
                     Language.Quasi.OverloadApp
                     Language.Quasi.StringSub
  Extensions:        RankNTypes
  Build-depends:     base >= 3.0 && < 6,
                     containers,
                     either,
                     haskell-src-exts,
                     haskell-src-meta == 0.5.1.1, 
                     parsec,
                     split,
                     syb,
                     template-haskell >= 2.5.0.0,
                     themplates,
                     th-build,
                     th-extra,
                     th-lift,
                     transformers
  Ghc-options:       -Wall
